fixed footer height on mobile

--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ nav li.active a {
   }
   .footer {
     margin-bottom: 0;
-    height: 130px;
+    height: 150px;
   }
   .profile-description {
     margin-left: 0;
